--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -1,14 +1,14 @@
-location YNH_LOCATION {
-      proxy_set_header X-Real-IP $remote_addr;
-      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-      proxy_set_header Host $http_host;
-      proxy_set_header X-NginX-Proxy true;
+#sub_path_only rewrite ^__PATH__$ __PATH__/ permanent;
+location __PATH__/ {
 
-      proxy_pass http://127.0.0.1:7778YNH_LOCATION;
-      proxy_redirect default;
+  # Path to source
+  alias __FINALPATH__/ ;
 
-      # Websocket support (from version 1.4)
-      proxy_http_version 1.1;
-      proxy_set_header Upgrade $http_upgrade;
-      proxy_set_header Connection "upgrade";
+  # Force usage of https
+  if ($scheme = http) {
+    rewrite ^ https://$server_name$request_uri? permanent;
+  }
+
+  # Include SSOWAT user panel.
+  include conf.d/yunohost_panel.conf.inc;
 }
