--- a/manifest.json
+++ b/manifest.json
@@ -1,46 +1,58 @@
 {
     "name": "KiwiIRC",
     "id": "kiwiirc",
+    "packaging_format": 1,
     "description": {
-        "en": "Web IRC client",
-        "fr": "Client Web pour IRC"
+        "en": "",
+        "fr": ""
     },
-    "developer": {
-        "name": "Julien Malik",
-        "email": "julien.malik@paraiso.me",
-        "url": "https://kiwiirc.com/"
+    "version": "1.5.0~ynh1",
+    "url": "https://github.com/kiwiirc/kiwiirc",
+    "license": "AGPL-3.0-only",
+    "maintainer": {
+        "name": ""
     },
-    "multi_instance": "false",
+    "requirements": {
+        "yunohost": ">= 3.8.1"
+    },
+    "multi_instance": false,
+    "services": [
+        "nginx"
+    ],
     "arguments": {
         "install" : [
             {
                 "name": "domain",
+                "type": "domain",
                 "ask": {
-                    "en": "Choose a domain for KiwiIRC",
-                    "fr": "Choisissez un domaine pour KiwiIRC"
+                    "en": "Choose a domain name for KiwiIRC",
+                    "fr": "Choisissez un nom de domaine pour KiwiIRC"
                 },
                 "example": "domain.org"
             },
             {
                 "name": "path",
+                "type": "path",
                 "ask": {
                     "en": "Choose a path for KiwiIRC",
-                    "fr": "Choisissez un path pour KiwiIRC"
+                    "fr": "Choisissez un chemin pour KiwiIRC"
                 },
-                "example": "/irc",
-                "default": "/irc"
+                "example": "/kiwiirc",
+                "default": "/kiwiirc"
             },
             {
-                "name": "public_site",
+                "name": "is_public",
+                "type": "boolean",
                 "ask": {
-                    "en": "Is it a public KiwiIRC site ?",
+                    "en": "Is it a public site?",
                     "fr": "Est-ce un site public ?"
                 },
-                "choices": ["Yes", "No"],
-                "default": "Yes"
+                "help": {
+                    "en": "If enabled, KiwiIRC will be accessible by people who do not have an account. This can be changed later via the webadmin.",
+                    "fr": "Si cette case est cochée, KiwiIRC sera accessible aux personnes n’ayant pas de compte. Vous pourrez changer ceci plus tard via la webadmin."
+                },
+                "default": true
             }
         ]
     }
 }
-
-
