--- a/conf/config.json.example
+++ b/conf/config.json.example
@@ -1,21 +1,31 @@
 {
     "windowTitle": "Kiwi IRC - The web IRC client",
-    "startupScreen": "customServer",
-    "kiwiServer": "http://example.com/webirc/kiwiirc/",
+    "startupScreen": "welcome",
+    "kiwiServer": "https://localdev.clients.kiwiirc.com/webirc/kiwiirc/",
     "restricted": false,
-    "theme": "default",
+    "theme": "Default",
     "themes": [
-        { "name": "Default", "url": "static/themes/default.css" }
+        { "name": "Default", "url": "static/themes/default" },
+        { "name": "Dark", "url": "static/themes/dark" },
+        { "name": "Coffee", "url": "static/themes/coffee" },
+        { "name": "GrayFox", "url": "static/themes/grayfox" },
+        { "name": "Nightswatch", "url": "static/themes/nightswatch" },
+        { "name": "Osprey", "url": "static/themes/osprey" },
+        { "name": "Radioactive", "url": "static/themes/radioactive" },
+        { "name": "Sky", "url": "static/themes/sky" },
+        { "name": "Elite", "url": "static/themes/elite" }
     ],
     "startupOptions" : {
-        "server": "irc.freenode.net",
+        "server": "chat.freenode.net",
         "port": 6697,
         "tls": true,
-        "channel": "",
+        "channel": "#yunohost",
         "nick": ""
     },
     "embedly": {
         "key": ""
     },
-    "plugins": []
+    "plugins": [
+        { "name": "customise", "url": "static/plugins/customise.html" }
+    ]
 }
