--- a/conf/config.json.example
+++ b/conf/config.json.example
@@ -1,7 +1,7 @@
 {
     "windowTitle": "Kiwi IRC - The web IRC client",
     "startupScreen": "welcome",
-    "kiwiServer": "https://localdev.clients.kiwiirc.com/webirc/kiwiirc/",
+    "kiwiServer": "https://__DOMAIN__/webirc/kiwiirc/",
     "restricted": false,
     "theme": "Default",
     "themes": [
