--- a/conf/config.json.example
+++ b/conf/config.json.example
@@ -1,7 +1,7 @@
 {
     "windowTitle": "Kiwi IRC",
     "startupScreen": "welcome",
-    "kiwiServer": "https://__DOMAIN__/webirc/kiwiirc/",
+    "kiwiServer": "https://__DOMAIN____PATH__",
     "restricted": false,
     "theme": "Default",
     "themes": [
