--- a/manifest.json
+++ b/manifest.json
@@ -3,8 +3,8 @@
     "id": "kiwiirc",
     "packaging_format": 1,
     "description": {
-        "en": "A versatile web based messenger using IRC",
-        "fr": "Une messagerie Web polyvalente utilisant IRC"
+        "en": "Versatile web based messenger using IRC",
+        "fr": "Messagerie Web polyvalente utilisant IRC"
     },
     "version": "1.5.0~ynh1",
     "url": "https://github.com/kiwiirc/kiwiirc",
@@ -31,8 +31,7 @@
         "install" : [
             {
                 "name": "domain",
-                "type": "domain",
-                "example": "domain.org"
+                "type": "domain"
             },
             {
                 "name": "path",
