--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -5,7 +5,7 @@ location __PATH__/ {
   proxy_set_header X-Real-IP $remote_addr;
   proxy_set_header x-forwarded-for $remote_addr;
 
-  proxy_pass http://127.0.0.1:__PORT__;
+  proxy_pass http://127.0.0.1:__PORT__/kiwi/;
   proxy_redirect default;
 
   # Websocket support (from version 1.4)
