--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -1,15 +1,21 @@
-#sub_path_only rewrite ^__PATH__$ __PATH__/ permanent;
-location __PATH__/ {
+location / {
+    index index.html;
+    root /usr/share/kiwiirc/;
+}
 
-  proxy_set_header Host $host;
-  proxy_set_header X-Real-IP $remote_addr;
-  proxy_set_header x-forwarded-for $remote_addr;
+location /webirc/ {
+    # Forward incoming requests to local webircgateway socket
+    proxy_pass http://127.0.0.1:__PORT__/webirc/;
+    
+    # Set http version and headers
+    proxy_http_version 1.1;
+        
+    # Add X-Forwarded-* headers
+    proxy_set_header X-Forwarded-Host   $host;
+    proxy_set_header X-Forwarded-Proto  $scheme;
+    proxy_set_header X-Forwarded-For    $remote_addr;
 
-  proxy_pass http://127.0.0.1:__PORT__/kiwi/;
-  proxy_redirect default;
-
-  # Websocket support (from version 1.4)
-  proxy_http_version 1.1;
-  proxy_set_header Upgrade $http_upgrade;
-  proxy_set_header Connection "upgrade";
+    # Allow upgrades to websockets
+    proxy_set_header Upgrade     $http_upgrade;
+    proxy_set_header Connection  "upgrade";
 }
