--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -1,9 +1,10 @@
-location / {
+#sub_path_only rewrite ^__PATH__$ __PATH__/ permanent;
+location __PATH__/ {
     index index.html;
     root /usr/share/kiwiirc/;
 }
 
-location /webirc/ {
+location __PATH__/webirc/ {
     # Forward incoming requests to local webircgateway socket
     proxy_pass http://127.0.0.1:__PORT__/webirc/;
     
