--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -1,10 +1,9 @@
-#sub_path_only rewrite ^__PATH__$ __PATH__/ permanent;
-location __PATH__/ {
+location / {
     index index.html;
     root /usr/share/kiwiirc/;
 }
 
-location __PATH__/webirc/ {
+location /webirc/ {
     # Forward incoming requests to local webircgateway socket
     proxy_pass http://127.0.0.1:__PORT__/webirc/;
     
