--- a/conf/config.conf.example
+++ b/conf/config.conf.example
@@ -62,7 +62,7 @@ bind_mode = 0777
 # Optional, but handy for serving the Kiwi IRC client if no other webserver is available
 [fileserving]
 enabled = true
-webroot = www/
+webroot = /usr/share/kiwiirc/
 
 [transports]
 websocket
@@ -89,8 +89,8 @@ kiwiirc
 # Connections will be sent to a random upstream
 [upstream.1]
 hostname = "irc.libera.chat"
-port = 6697
-tls = true
+port = 6667
+tls = false
 # Connection timeout in seconds
 timeout = 5
 # Throttle the lines being written by X per second
