--- a/conf/server.conf
+++ b/conf/server.conf
@@ -38,8 +38,8 @@ realname = "I am a webchat user"
 
 # The websocket / http server
 [server.1]
-bind = "0.0.0.0"
-port = 80
+bind = "127.0.0.1"
+port = __PORT__
 
 # Example TLS server
 #[server.2]
@@ -62,7 +62,7 @@ port = 80
 # Optional, but handy for serving the Kiwi IRC client if no other webserver is available
 [fileserving]
 enabled = true
-webroot = www/
+webroot = __INSTALL_DIR__/www/
 
 [transports]
 websocket
@@ -88,7 +88,7 @@ kiwiirc
 
 # Connections will be sent to a random upstream
 [upstream.1]
-hostname = "irc.kiwiirc.com"
+hostname = "irc.libera.chat"
 port = 6667
 tls = false
 # Connection timeout in seconds
@@ -98,6 +98,11 @@ throttle = 2
 # Webirc password as set in the IRC server config
 webirc = ""
 serverpassword = ""
+# Outgoing protocol, valid options: tcp, tcp4, tcp6, unix
+# this can be used to force ipv4, ipv6 etc
+protocol = tcp
+# IP address of the local network interface to bind for outgoing connections
+localaddr = ""
 
 
 # A public gateway to any IRC network
@@ -107,6 +112,10 @@ serverpassword = ""
 enabled = false
 timeout = 5
 throttle = 2
+# Outgoing protocol, valid options: tcp, tcp4, tcp6
+protocol = tcp
+# IP address of the local network interface to bind for outgoing connections
+localaddr = ""
 
 # Whitelisted IRC networks while in public gateway mode
 # If any networks are in this list then connections can only be made to these
@@ -122,7 +131,7 @@ irc.network2.org = webirc_password
 [dnsbl]
 # "verify" - if the client supports it, tell it to show a captcha
 # "deny" - deny the connection entirely
-action = deny
+action = verify
 
 [dnsbl.servers]
 dnsbl.dronebl.org
