--- a/conf/config.conf
+++ b/conf/config.conf
@@ -61,7 +61,7 @@ port = __PORT__
 # Serve static files from a web root folder.
 # Optional, but handy for serving the Kiwi IRC client if no other webserver is available
 [fileserving]
-enabled = true
+enabled = false
 webroot = __INSTALL_DIR__/www/
 
 [transports]
