--- a/conf/config.conf
+++ b/conf/config.conf
@@ -131,7 +131,8 @@ irc.network2.org = webirc_password
 [dnsbl]
 # "verify" - if the client supports it, tell it to show a captcha
 # "deny" - deny the connection entirely
-action = verify
+## notes for yunohost: it looks like the code accepts other values than deny and verify
+action = none
 
 [dnsbl.servers]
 dnsbl.dronebl.org
