--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -9,10 +9,12 @@ location /webirc/ {
 
     # Set http version and headers
     proxy_http_version 1.1;
+    proxy_redirect default;
 
     # Add X-Forwarded-* headers
     proxy_set_header X-Forwarded-Host   $host;
     proxy_set_header X-Forwarded-Proto  $scheme;
+    proxy_set_header X-Real-IP          $remote_addr;
     proxy_set_header X-Forwarded-For    $remote_addr;
 
     # Allow upgrades to websockets
